--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,7 @@
 @main-bg: @white;
 @navigation-border: @silver;
 @footer-bg: @sandy-beach;
+@mobile: ~"(max-width: 500px)";
 
 // Colors
 @white: #ffffff;
@@ -14,4 +15,10 @@
 
 @light-sand: #fff5e6;
 @mid-sand: #f3d4a5;
-@dark-sand: #aa6e14;
+@dark-sand: #9c5e00;
+@really-dark-sand: #271700;
+
+@light: #d6e0e8;
+@mid-light: #c2d7e8;
+@mid: #506170;
+@dark: #1b2a38;
