--- a/less/footer.less
+++ b/less/footer.less
@@ -1,12 +1,11 @@
 .footer {
   width: 100%;
-  border-top: 2px dashed silver;
-  background: @sandy-beach;
-  
+  background: @dark;
+
   p {
     text-align: center;
-    color: @font-color;
-    font-size: 1.6rem;
-    padding: 20px;
+    color: @mid-light;
+    font-size: 1.3rem;
+    padding: 1em;
   }
 }
