--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,3 +3,17 @@
   justify-content: @justify;
   align-items: @align;
 }
+
+.styleButton(@color) {
+  border: 2px solid @color;
+  color: @color;
+  text-decoration: none;
+  padding: 1em 3em;
+  text-align: center;
+}
+
+.hoverButton(@color) {
+  border: 2px solid @color;
+  color: white;
+  background-color: @color;
+}
