--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,7 +5,13 @@ nav {
   .displayFlex(space-between, center);
   position: fixed;
   flex-wrap: wrap;
-  background-color: @dark-sand;
+  background-color: @dark;
+
+  #logo {
+    color: @light-sand;
+    text-decoration: none;
+    margin-left: 10em;
+  }
 
   .toggle-bars {
     position: absolute;
@@ -25,17 +31,16 @@ nav {
   }
 
   .links {
-    display: flex;
-    justify-content: space-evenly;
-    width: 70%;
+    .displayFlex(space-around, center);
+    width: 50%;
     height: 3em;
     // background-color: @mid-sand;
-    align-items: center;
 
     a {
       text-decoration: none;
       color: @white;
       letter-spacing: 1px;
+      font-size: 1.4em;
 
       &.hover {
         text-decoration: underline;
