--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,15 +4,15 @@
   align-items: @align;
 }
 
-.styleButton(@color) {
+.styleButton(@color : black) {
   border: 2px solid @color;
   color: @color;
   text-decoration: none;
-  padding: 1em 3em;
+  padding: 1em 2em;
   text-align: center;
 }
 
-.hoverButton(@color) {
+.hoverButton(@color : black) {
   border: 2px solid @color;
   color: white;
   background-color: @color;
