--- a/less/navigation.less
+++ b/less/navigation.less
@@ -45,6 +45,11 @@ nav {
     width: 50%;
     height: 3em;
     // background-color: @mid-sand;
+    .slowerAnimation(0.2s);
+
+    @media @mobile {
+      width: 100%;
+    }
 
     a {
       text-decoration: none;
